--- a/billie.html
+++ b/billie.html
@@ -7,6 +7,9 @@
     <script>window.jQuery || document.write('<script src="jquery-1.8.1.js"><\/script>')</script>
     <title>medium</title>
     <style>
+    html {
+      height: 100%;
+    }
     body {
       margin: 0;
       height: 100%;
