--- a/billie.html
+++ b/billie.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="simulating medium">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>window.jQuery || document.write('<script src="jquery-1.8.1.js"><\/script>')</script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <title>medium</title>
     <style>
     html {
